Migration result task_id bded773f-6781-46da-a033-02e6a4f3ad0b

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Android13PermissionDemo</string>
+<string name="app_name">open_nfc</string>
+<string name="github_link"><a href="http://www.google.com">https://github.com/artvuu</a></string>
 </resources>
